--- a/frontend/public/locales/en/reports.json
+++ b/frontend/public/locales/en/reports.json
@@ -1,7 +1,8 @@
-{
+{"report":{
   "title": "Reports",
   "generate": "Generate Report",
   "compliance": "Compliance Report",
   "export": "Export",
-  "download": "Download PDF"
-}
+  "download": "Download PDF",
+  "identificacao":"Identification"
+}}
